added p and span tags

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>estoy haciendo esto desde mi nueva rama dev</p>
+    <span>para ir actualizando mi portafolio sin tocar el que ya esta listo</span>
 </body>
 </html>
